--- a/#src/modules/main-section/_main-section.html
+++ b/#src/modules/main-section/_main-section.html
@@ -1,13 +1,13 @@
 <div class="main-section__product-row">
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-1.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-1.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Нигири с тунцом опаленным</div>
     <div class="product-item__price">
       <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -19,14 +19,14 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-2.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Спайси текка маки</div>
     <div class="product-item__price">
       <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
       <p>3.10<span> руб. за 1/2 порции (4шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -38,13 +38,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-3.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
       <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -56,13 +56,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/no-img.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
       <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -74,13 +74,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-1.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-1.png" src="./img/products/no-img.png" alt="#"  />
     </div>
     <div class="product-item__title">Нигири с тунцом опаленным</div>
     <div class="product-item__price">
       <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -92,14 +92,14 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-2.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Спайси текка маки</div>
     <div class="product-item__price">
       <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
       <p>3.10<span> руб. за 1/2 порции (4шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -111,13 +111,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-3.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
       <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -129,13 +129,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/no-img.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
       <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -147,13 +147,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/product-3.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
       <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
@@ -165,13 +165,13 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img src="./img/products/no-img.png" alt="#" />
+      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
       <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
     </div>
-    <div class="counter product-item__counter">
+    <div class="product-item__counter">
       <div class="counter">
         <form action="#">
           <div class="minus" data-minus>-</div>
