--- a/#src/modules/catalog/_catalog.html
+++ b/#src/modules/catalog/_catalog.html
@@ -32,6 +32,13 @@
       <div class="catalog__col">
         <div class="catalog__item catalog-item">
           <a class="catalog-item__link" href="#"></a>
+          <img src="./img/catalog/catalog-item-img-1.png" alt="#" class="catalog-item__img">
+          <div class="catalog-item__text">Обеденное меню</div>
+        </div>
+      </div>
+      <div class="catalog__col">
+        <div class="catalog__item catalog-item">
+          <a class="catalog-item__link" href="#"></a>
           <img src="./img/catalog/catalog-item-img-5.png" alt="#" class="catalog-item__img">
           <div class="catalog-item__text">Футо Маки</div>
         </div>
@@ -53,6 +60,13 @@
       <div class="catalog__col">
         <div class="catalog__item catalog-item">
           <a class="catalog-item__link" href="#"></a>
+          <img src="./img/catalog/catalog-item-img-1.png" alt="#" class="catalog-item__img">
+          <div class="catalog-item__text">Обеденное меню</div>
+        </div>
+      </div>
+      <div class="catalog__col">
+        <div class="catalog__item catalog-item">
+          <a class="catalog-item__link" href="#"></a>
           <img src="./img/catalog/catalog-item-img-8.png" alt="#" class="catalog-item__img">
           <div class="catalog-item__text">СушиРрито</div>
         </div>
@@ -62,6 +76,13 @@
           <a class="catalog-item__link" href="#"></a>
           <img src="./img/catalog/catalog-item-img-9.png" alt="#" class="catalog-item__img">
           <div class="catalog-item__text">Сеты</div>
+        </div>
+      </div>
+      <div class="catalog__col">
+        <div class="catalog__item catalog-item">
+          <a class="catalog-item__link" href="#"></a>
+          <img src="./img/catalog/catalog-item-img-1.png" alt="#" class="catalog-item__img">
+          <div class="catalog-item__text">Обеденное меню</div>
         </div>
       </div>
       <div class="catalog__col">
