--- a/#src/index.html
+++ b/#src/index.html
@@ -26,15 +26,12 @@
               </div>
               <div class="main-section__right-col">
                 <h2 class="base-title main-section__base-title">Корзина</h2>
-
                 <div class="main-section__card-wrapper">
                   <div class="card">
 
                     <div class="item-card card__item">
                       <div class="item-card__text">
-                        <div class="item-card__title">
-                          Сет "Только мне"
-                        </div>
+                        <div class="item-card__title">Сет "Только мне"</div>
                         <div class="item-card__price">16.50 руб</div>
                       </div>
                       <div class="item-card__description">(10 шт - 554гр)</div>
@@ -48,38 +45,15 @@
                         </div>
                       </div>
                     </div>
-
-                    <div class="item-card card__item">
-                      <div class="item-card__text">
-                        <div class="item-card__title">
-                          Нигири с тунцом опаленным
-                        </div>
-                        <div class="item-card__price">8 руб</div>
-                      </div>
-                      <div class="item-card__description">(8 шт - 250гр)</div>
-                      <div class="item-card__counter">
-                        <div class="counter">
-                          <form action="#">
-                            <div class="minus" data-minus>-</div>
-                            <input type="text" value="1" data-counter />
-                            <div class="plus" data-plus>+</div>
-                          </form>
-                        </div>
-                      </div>
-                    </div>
-
+                    
                     <div class="card__total">
-                      <div class="card__total-text">
-                        Сумма со скидкой
-                      </div>
+                      <div class="card__total-text">Сумма со скидкой</div>
                       <div class="card__total-price">
                         <p class="card__total-price--default">60.80 руб</p>
                         <p class="card__total-price--sale">59.80 руб</p>
                       </div>
                     </div>
-
                     <button class="card__btn btn-reset">Оформить заказ</button>
-
                   </div>
                 </div>
               </div>
@@ -88,6 +62,16 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
+      integrity="sha512-rCjfoab9CVKOH/w/T6GbBxnAH5Azhy4+q1EXW5XEURefHbIkRbQ++ZR+GBClo3/d3q583X/gO4FKmOFuhkKrdA=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/vendors.js"></script>
     <script src="./js/main.js"></script>
   </body>
