--- a/#src/modules/main-section/_main-section.html
+++ b/#src/modules/main-section/_main-section.html
@@ -5,14 +5,14 @@
     </div>
     <div class="product-item__title">Нигири с тунцом опаленным</div>
     <div class="product-item__price">
-      <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
+      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
         <form action="#">
-          <div class="minus" data-minus>-</div>
+          <div class="minus" data-minus data-id="id1">-</div>
           <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
+          <div class="plus" data-plus data-id="id1">+</div>
         </form>
       </div>
     </div>
@@ -23,15 +23,15 @@
     </div>
     <div class="product-item__title">Спайси текка маки</div>
     <div class="product-item__price">
-      <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
-      <p>3.10<span> руб. за 1/2 порции (4шт)</span></p>
+      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
+      <p>3.10<span class="small-descr"> руб. за 1/2 порции (4шт)</span></p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
         <form action="#">
-          <div class="minus" data-minus>-</div>
+          <div class="minus" data-minus data-id="id2">-</div>
           <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
+          <div class="plus" data-plus data-id="id2">+</div>
         </form>
       </div>
     </div>
@@ -42,14 +42,14 @@
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
-      <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
+      <p><span class="price">252.90</span><span class="small-descr">руб. за 1 порцию (1шт)</span></p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
         <form action="#">
-          <div class="minus" data-minus>-</div>
+          <div class="minus" data-minus data-id="id3">-</div>
           <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
+          <div class="plus" data-plus data-id="id3">+</div>
         </form>
       </div>
     </div>
@@ -60,128 +60,19 @@
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
-      <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
+      <p><span class="price">2.90</span><span class="small-descr">руб. за 1 порцию (8шт)</span></p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
         <form action="#">
-          <div class="minus" data-minus>-</div>
+          <div class="minus" data-minus data-id="id4">-</div>
           <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
+          <div class="plus" data-plus data-id="id4">+</div>
         </form>
       </div>
     </div>
   </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-1.png" src="./img/products/no-img.png" alt="#"  />
-    </div>
-    <div class="product-item__title">Нигири с тунцом опаленным</div>
-    <div class="product-item__price">
-      <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
-    </div>
-    <div class="product-item__title">Спайси текка маки</div>
-    <div class="product-item__price">
-      <p>5.60<span> руб. за 1 порцию (8шт)</span></p>
-      <p>3.10<span> руб. за 1/2 порции (4шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
-    </div>
-    <div class="product-item__title">Корпоративный переполох на 22 человек</div>
-    <div class="product-item__price">
-      <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
-    </div>
-    <div class="product-item__title">Нигири с тунцом маринованным</div>
-    <div class="product-item__price">
-      <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
-    </div>
-    <div class="product-item__title">Корпоративный переполох на 22 человек</div>
-    <div class="product-item__price">
-      <p>252.90<span>руб. за 1 порцию (1шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="product-item main-section__product-item">
-    <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
-    </div>
-    <div class="product-item__title">Нигири с тунцом маринованным</div>
-    <div class="product-item__price">
-      <p>2.90<span>руб. за 1 порцию (8шт)</span></p>
-    </div>
-    <div class="product-item__counter">
-      <div class="counter">
-        <form action="#">
-          <div class="minus" data-minus>-</div>
-          <input type="text" value="1" data-counter />
-          <div class="plus" data-plus>+</div>
-        </form>
-      </div>
-    </div>
-  </div>
-
+  
   <div class="product-item sda-block main-section__product-item">
     <img src="./img/banner.png" alt="#" />
   </div>
