--- a/#src/index.html
+++ b/#src/index.html
@@ -29,7 +29,7 @@
                 <div class="main-section__card-wrapper">
                   <div class="card">
 
-                    <div class="item-card card__item">
+                    <!-- <div class="item-card card__item">
                       <div class="item-card__text">
                         <div class="item-card__title">Сет "Только мне"</div>
                         <div class="item-card__price">16.50 руб</div>
@@ -44,7 +44,7 @@
                           </form>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     
                     <div class="card__total">
                       <div class="card__total-text">Сумма со скидкой</div>
