--- a/#src/modules/header/_header.html
+++ b/#src/modules/header/_header.html
@@ -14,17 +14,20 @@
           <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
         </ul>
       </nav>
-      <div class="header__phone">
-        <a href="tel:+375293210000">+375 (29) 321 00 00</a>
-      </div>
-      <form action="#" class="search header__search">
-        <label class="search__label">
-          <input type="text" class="search__input" placeholder="Поиск">
-        </label>
-      </form>
 
-      <div class="header__lang">Rus</div>
-      <div class="header__login"></div>
+      <div class="header__second-wrapper">
+        <div class="header__phone">
+          <a href="tel:+375293210000">+375 (29) 321 00 00</a>
+        </div>
+        <form action="#" class="search header__search">
+          <label class="search__label">
+            <input type="text" class="search__input" placeholder="Поиск">
+          </label>
+        </form>
+        <div class="header__lang">Rus</div>
+        <div class="header__login"></div>
+      </div>
+
     </div>
   </div>
 </header>
