--- a/#src/index.html
+++ b/#src/index.html
@@ -28,7 +28,7 @@
                 <h2 class="base-title main-section__base-title">Корзина</h2>
                 <div class="main-section__card-wrapper">
                   <div class="card">
-
+                    <div class="card__list"></div>
                     <!-- <div class="item-card card__item">
                       <div class="item-card__text">
                         <div class="item-card__title">Сет "Только мне"</div>
