--- a/#src/modules/main-section/_main-section.html
+++ b/#src/modules/main-section/_main-section.html
@@ -1,11 +1,19 @@
 <div class="main-section__product-row">
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-1.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-1.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом опаленным</div>
     <div class="product-item__price">
-      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">5.60</span
+        ><span class="small-descr"> руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -19,11 +27,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Спайси текка маки</div>
     <div class="product-item__price">
-      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">5.60</span
+        ><span class="small-descr"> руб. за 1 порцию (8шт)</span>
+      </p>
       <p>3.10<span class="small-descr"> руб. за 1/2 порции (4шт)</span></p>
     </div>
     <div class="product-item__counter">
@@ -38,11 +54,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-3.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
-      <p><span class="price">252.90</span><span class="small-descr">руб. за 1 порцию (1шт)</span></p>
+      <p>
+        <span class="price">252.90</span
+        ><span class="small-descr">руб. за 1 порцию (1шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -56,11 +80,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
-      <p><span class="price">2.90</span><span class="small-descr">руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">2.90</span
+        ><span class="small-descr">руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -74,11 +106,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-1.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-1.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом опаленным</div>
     <div class="product-item__price">
-      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">5.60</span
+        ><span class="small-descr"> руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -92,11 +132,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Спайси текка маки</div>
     <div class="product-item__price">
-      <p><span class="price">5.60</span><span class="small-descr"> руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">5.60</span
+        ><span class="small-descr"> руб. за 1 порцию (8шт)</span>
+      </p>
       <p>3.10<span class="small-descr"> руб. за 1/2 порции (4шт)</span></p>
     </div>
     <div class="product-item__counter">
@@ -111,11 +159,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-3.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-3.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Корпоративный переполох на 22 человек</div>
     <div class="product-item__price">
-      <p><span class="price">252.90</span><span class="small-descr">руб. за 1 порцию (1шт)</span></p>
+      <p>
+        <span class="price">252.90</span
+        ><span class="small-descr">руб. за 1 порцию (1шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -129,11 +185,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
-      <p><span class="price">2.90</span><span class="small-descr">руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">2.90</span
+        ><span class="small-descr">руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -147,11 +211,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
-      <p><span class="price">2.90</span><span class="small-descr">руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">2.90</span
+        ><span class="small-descr">руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -165,11 +237,19 @@
   </div>
   <div class="product-item main-section__product-item">
     <div class="product-item__img">
-      <img class="lazyload" data-src="./img/products/product-2.png" src="./img/products/no-img.png" alt="#" />
+      <img
+        class="lazyload"
+        data-src="./img/products/product-2.png"
+        src="./img/products/no-img.png"
+        alt="#"
+      />
     </div>
     <div class="product-item__title">Нигири с тунцом маринованным</div>
     <div class="product-item__price">
-      <p><span class="price">2.90</span><span class="small-descr">руб. за 1 порцию (8шт)</span></p>
+      <p>
+        <span class="price">2.90</span
+        ><span class="small-descr">руб. за 1 порцию (8шт)</span>
+      </p>
     </div>
     <div class="product-item__counter">
       <div class="counter">
@@ -181,7 +261,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="product-item sda-block main-section__product-item">
     <img src="./img/banner.png" alt="#" />
   </div>
@@ -221,10 +301,6 @@
       <a href="#" class="footer__big-text"
         >Подробнее условия оплаты и доставки
       </a>
-      <div class="footer__copyright">
-        © 2007- 2020 "СУШИ ВЕСЛА". &nbsp;&nbsp;&nbsp; Разработка сайта -
-        <a href="#">Gik Media</a>
-      </div>
     </div>
 
     <div class="footer__col-right">
@@ -252,5 +328,10 @@
         Юридический и почтовый адрес: 220036, г. Минск, ул. К. Либкнехта, 45-17а
       </div>
     </div>
+  </div>
+
+  <div class="footer__copyright">
+    © 2007- 2020 "СУШИ ВЕСЛА". &nbsp;&nbsp;&nbsp; Разработка сайта -
+    <a href="#">Gik Media</a>
   </div>
 </footer>
