--- a/#src/index.html
+++ b/#src/index.html
@@ -32,8 +32,8 @@
                     <div class="card__total">
                       <div class="card__total-text">Сумма со скидкой</div>
                       <div class="card__total-price">
-                        <p class="card__total-price--default">60.80 руб</p>
-                        <p class="card__total-price--sale">59.80 руб</p>
+                        <p class="card__total-price--default"></p>
+                        <p class="card__total-price--sale"></p>
                       </div>
                     </div>
                     <button class="card__btn btn-reset">Оформить заказ</button>
